# dotmac-insights

./: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  alembic.ini  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  cli.py  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  qa_books_frontend_report.md  requirements.txt  test_erpnext.py  test_erpnext_sync.py
alembic/: env.py
app/: __init__.py  auth.py  cache.py  config.py  database.py  feature_flags.py  main.py  worker.py
data/: notification_templates.json
docs/: DATABASE_INDEX_REVIEW.md  RECONCILIATION_PROCESS.md  USER_JOURNEYS.md  alerts_promql.md  field-service-architecture.md  performance-module.md  preprod_checklist.md
frontend/: .dockerignore  .env.e2e  .env.e2e.example  Dockerfile  Dockerfile.dev  central-components-audit-buttons-permissions.md  central-components-audit.md  centralization-opportunities.md  eslint.config.js  eslint.config.mjs  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
scripts/: README_schema_prechecks.md  backfill_unified_contacts.py  backfill_unified_tickets.py  cleanup_addresses.py  debug_splynx_customers.py  push_addresses_to_splynx.py  quick_test.sh  report_cross_module_fk_backfill.sql  run_migrations.sh  schema_prechecks.py  seed_nigeria_compliance.py  test_api.sh
tests/: conftest.py  test_auth_security.py  test_bank_reconciliation_pagination.py  test_books_backend.py  test_contacts_rbac.py  (+14 more)
(+1368 files in other folders)
